# eCALDemos

./: .gitignore  CMakeLists.txt
aws/: Creación de VPC y subredes.docx  web-employee-app.txt
cpp/: CMakeLists.txt  ecal_send_numeric.cpp
proto/: .gitignore  CMakeLists.txt  mensaje_data.proto
python/: GUI_Receive.py  GUI_Send.py  ecal_minimal_client.py  ecal_minimal_server.py  ecal_rec_json.py  receiveNumeric.py  receiveNumericCallback.py  receiveWebcam.py  receive_rabbit.py  sendNumeric.py  sendWebcam.py  send_rabbit.py  webcam_MNIST.py
